Created Dashboard form.

--- a/BinCompeteSoft/BinCompeteSoft.csproj
+++ b/BinCompeteSoft/BinCompeteSoft.csproj
@@ -47,17 +47,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AHP.cs" />
+    <Compile Include="Contest.cs" />
+    <Compile Include="JudgeMember.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainJudgeDashboardForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainJudgeDashboardForm.Designer.cs">
+      <DependentUpon>MainJudgeDashboardForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainJudgeDashboardForm.resx">
+      <DependentUpon>MainJudgeDashboardForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
