--- a/BinCompeteSoft/BinCompeteSoft.csproj
+++ b/BinCompeteSoft/BinCompeteSoft.csproj
@@ -58,9 +58,15 @@
     <Compile Include="AddJudgeForm.Designer.cs">
       <DependentUpon>AddJudgeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="BinCompeteSoftDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BinCompeteSoftDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Classes\AHP.cs" />
     <Compile Include="Classes\Contest.cs" />
     <Compile Include="Classes\Criteria.cs" />
+    <Compile Include="DBSqlHelper.cs" />
     <Compile Include="Classes\Evaluation.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="EditContestDescriptionForm.cs">
@@ -142,6 +148,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="BinCompeteSoftDataSet.xsc">
+      <DependentUpon>BinCompeteSoftDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="BinCompeteSoftDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>BinCompeteSoftDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="BinCompeteSoftDataSet.xss">
+      <DependentUpon>BinCompeteSoftDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
