--- a/BinCompeteSoft/BinCompeteSoft.csproj
+++ b/BinCompeteSoft/BinCompeteSoft.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Classes\AHP.cs" />
     <Compile Include="Classes\Contest.cs" />
     <Compile Include="Classes\Criteria.cs" />
+    <Compile Include="Classes\User.cs" />
     <Compile Include="DBSqlHelper.cs" />
     <Compile Include="Classes\Evaluation.cs" />
     <Compile Include="Data.cs" />
