Updated database data set. Updated contest add form.

--- a/BinCompeteSoft/BinCompeteSoft.csproj
+++ b/BinCompeteSoft/BinCompeteSoft.csproj
@@ -58,6 +58,9 @@
     <Compile Include="AddJudgeForm.Designer.cs">
       <DependentUpon>AddJudgeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="BinCompeteSoftDataSet.cs">
+      <DependentUpon>BinCompeteSoftDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="BinCompeteSoftDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
