Added category class. Now contests are fully inserted into database, including projects, judges and criterias. Removed "Enter anyway" button in login form.

--- a/BinCompeteSoft/BinCompeteSoft.csproj
+++ b/BinCompeteSoft/BinCompeteSoft.csproj
@@ -67,6 +67,7 @@
       <DependentUpon>BinCompeteSoftDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Classes\AHP.cs" />
+    <Compile Include="Classes\Category.cs" />
     <Compile Include="Classes\Contest.cs" />
     <Compile Include="Classes\Criteria.cs" />
     <Compile Include="Classes\User.cs" />
