--- a/BinCompeteSoft/BinCompeteSoft.csproj
+++ b/BinCompeteSoft/BinCompeteSoft.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Classes\AHP.cs" />
     <Compile Include="Classes\Category.cs" />
     <Compile Include="Classes\Contest.cs" />
+    <Compile Include="Classes\ContestPreview.cs" />
     <Compile Include="Classes\Criteria.cs" />
     <Compile Include="Classes\User.cs" />
     <Compile Include="DBSqlHelper.cs" />
