--- a/BinCompeteSoft/BinCompeteSoft.csproj
+++ b/BinCompeteSoft/BinCompeteSoft.csproj
@@ -130,6 +130,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Classes\Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResetPasswordForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ResetPasswordForm.Designer.cs">
+      <DependentUpon>ResetPasswordForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddCriteriaForm.resx">
       <DependentUpon>AddCriteriaForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -166,6 +172,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ResetPasswordForm.resx">
+      <DependentUpon>ResetPasswordForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="BinCompeteSoftDataSet.xsc">
       <DependentUpon>BinCompeteSoftDataSet.xsd</DependentUpon>
     </None>
