Fixed some errors that stopped the program from compiling correctly.

--- a/BinCompeteSoft/BinCompeteSoft.csproj
+++ b/BinCompeteSoft/BinCompeteSoft.csproj
@@ -72,7 +72,7 @@
     <Compile Include="Classes\AHP.cs" />
     <Compile Include="Classes\Category.cs" />
     <Compile Include="Classes\Contest.cs" />
-    <Compile Include="Classes\ContestPreview.cs" />
+    <Compile Include="Classes\ContestDetails.cs" />
     <Compile Include="Classes\Criteria.cs" />
     <Compile Include="Classes\User.cs" />
     <Compile Include="DBSqlHelper.cs" />
