Now connection string is loaded from external file.

--- a/BinCompeteSoft/BinCompeteSoft.csproj
+++ b/BinCompeteSoft/BinCompeteSoft.csproj
@@ -186,6 +186,9 @@
     <None Include="BinCompeteSoftDataSet.xss">
       <DependentUpon>BinCompeteSoftDataSet.xsd</DependentUpon>
     </None>
+    <Content Include="config.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
