Added promoter age to Promoter class. Added field to input promoter age when inserting a project.

--- a/BinCompeteSoft/BinCompeteSoft.csproj
+++ b/BinCompeteSoft/BinCompeteSoft.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Classes\Contest.cs" />
     <Compile Include="Classes\ContestDetails.cs" />
     <Compile Include="Classes\Criteria.cs" />
+    <Compile Include="Classes\Evaluation.cs" />
     <Compile Include="Classes\User.cs" />
     <Compile Include="DBSqlHelper.cs" />
     <Compile Include="Classes\ProjectEvaluation.cs" />
