Added some more statistics to the dashboard form. Added year to project class. Now project class stores actual category, not just id.

--- a/BinCompeteSoft/BinCompeteSoft.csproj
+++ b/BinCompeteSoft/BinCompeteSoft.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\BestProjects.cs" />
     <Compile Include="Classes\CategoryStatistics.cs" />
     <Compile Include="Classes\Statistic.cs" />
     <Compile Include="Components\exListBox.cs" />
