--- a/BinCompeteSoft/BinCompeteSoft.csproj
+++ b/BinCompeteSoft/BinCompeteSoft.csproj
@@ -63,6 +63,12 @@
     <Compile Include="Forms\ContestCriteriaVotingForm.Designer.cs">
       <DependentUpon>ContestCriteriaVotingForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ContestResultsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ContestResultsForm.Designer.cs">
+      <DependentUpon>ContestResultsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ContestVotingForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -160,6 +166,9 @@
     <None Include="Resources\Logo-WeDeb.png" />
     <EmbeddedResource Include="Forms\ContestCriteriaVotingForm.resx">
       <DependentUpon>ContestCriteriaVotingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ContestResultsForm.resx">
+      <DependentUpon>ContestResultsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ContestVotingForm.resx">
       <DependentUpon>ContestVotingForm.cs</DependentUpon>
